--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 footer{
     background-color: #002244;
+    align-items: center;
+    justify-content: center;
 }
 
 body{
     background-color: #1F305E;
     color: white;
+    font-family: 'Courier New', Courier, monospace
 }
 
 .navbar{
@@ -85,3 +88,10 @@ textarea:valid~label {
     top: -35px;
     font-size: 14px;
 }
+
+.about-img{
+    background: linear-gradient(rgba(9,21,118,0.8),rgba(9,21,118,0.8)), url(./img/johnnysoccer.jpeg);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
